--- a/biblioteca-g5/package.json
+++ b/biblioteca-g5/package.json
@@ -20,11 +20,12 @@
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
